--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "10.4.15",
     "daisyui": "^4.12.10",
-    "next": "14.2.12",
-    "next-auth": "^5.0.0-beta.22",
-    "react": "^18",
-    "react-dom": "^18"
+    "@nextui-org/react": "^2.2.10",
+    "framer-motion": "^11.0.25",
+    "next": "^14.0.3",
+    "next-auth": "^5.0.0-beta.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.12",
-    "postcss": "^8",
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.14",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^14.0.0",
+    "postcss": "8.4.31",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.2.2"
   }
 }
