--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@nextui-org/react": "^2.2.10",
     "autoprefixer": "10.4.15",
     "daisyui": "^4.12.10",
-    "@nextui-org/react": "^2.2.10",
     "framer-motion": "^11.0.25",
     "next": "^14.0.3",
     "next-auth": "^5.0.0-beta.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
