--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "npm run format",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write --ignore-unknown .",
+    "prettier:check": "prettier --check --ignore-unknown .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -28,6 +32,7 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "postcss": "8.4.31",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "5.2.2"
   }
