--- a/package.json
+++ b/package.json
@@ -13,27 +13,28 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
+    "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.2.10",
+    "@types/node": "20.5.7",
     "autoprefixer": "10.4.15",
     "daisyui": "^4.12.10",
     "framer-motion": "^11.0.25",
     "next": "^14.0.3",
     "next-auth": "^5.0.0-beta.13",
+    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-otp-input": "^3.1.1",
-    "react-phone-input-2": "^2.15.1"
+    "react-phone-input-2": "^2.15.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
-    "postcss": "8.4.31",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.2.2"
+    "prettier": "^3.4.2"
   }
 }
